fixed create game on safari

--- a/styles.css
+++ b/styles.css
@@ -239,7 +239,7 @@ input[type="submit"].startBtn:not(:disabled):hover {
     margin: 2px;
     position: relative;
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     justify-content: center;
     /* Ensure positioning for floating effect */
     width: 70vw;
@@ -258,10 +258,11 @@ input[type="submit"].startBtn:not(:disabled):hover {
     color: #fff;
     cursor: pointer;
     text-align: center;
-    width: 48.2542476654%;
+    width: 48%;
     padding: 7px 0;
     border-radius: 3px;
     padding: 12px 7px;
+    text-wrap: nowrap;
 }
 
 .switch-toggle input:checked+label {
